--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Hello World!</h1>
         <p>this is only test for GitHub</p>
+        <p>A new line in our file!</p>
     </body>
 </html>
