--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <div><img src="img_hello_world.jpg" alt="Hello World from Space"
+            style="width:100%;max-width:960px"></div>
         <p>this is only test for GitHub</p>
         <p>A new line in our file!</p>
     </body>
