--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
         <h1>Hello World!</h1>
         <p>this is only test for GitHub</p>
         <p>A new line in our file!</p>
+        <p>This line is here to show how merging works.</p>
+
     </body>
 </html>
