--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
             style="width:100%;max-width:960px"></div>
         <p>this is only test for GitHub</p>
         <p>A new line in our file!</p>
+        <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
     </body>
 </html>
