--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>test....</title>
-        <link rel="stylesheet" href="bluestyle.css">
+    <meta charset="UTF-8">
+    <title>test....</title>
+    <link rel="stylesheet" href="bluestyle.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <h1>Hello World!</h1>
